Adds buttons for withdrawal/transfer and deposit.

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,5 +3,7 @@
 
   <h3>Accounts:</h3>
 
+  <button id="deposit">Make a deposit</button>
+  <button id="withdraw">Withdraw or Transfer</button>
   <button id="new-account">Add an account</button>
 </div>
