Adds form for new accounts - still need to fix submit.

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,8 +1,13 @@
 <div id="container">
   <h1>Banque</h1>
 
-  <h3>Accounts:</h3>
+  <div id="activity-container">
+    <div id="accounts-field">
+      <h3>Accounts:</h3>
+    </div>
+  </div>
 
+  <br/>
   <button id="deposit">Make a deposit</button>
   <button id="withdraw">Withdraw or Transfer</button>
   <button id="new-account">Add an account</button>
