Adds accounts to index page, toggles links, and tries to get create account function to work.

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @account do |f| %>
-  <%= f.label :name %>
+<%= form_for(@account, remote: true) do |f| %>
+  <%= f.label :name %><br />
   <%= f.text_field :name %>
-  <%= f.submit %>
+  <div id="create-account"><%= f.submit %></div>
 <% end %>
