--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,5 +1,14 @@
 <%= form_for(@account, remote: true) do |f| %>
-  <%= f.label :name %><br />
-  <%= f.text_field :name %>
-  <div id="create-account"><%= f.submit %></div>
+  <div class="field">
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :balance %><br>
+    <%= f.number_field :balance %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+
 <% end %>
