Adds account name and initial value of 0 to database, returns list of accounts.

--- a/app/views/accounts/new.js.erb
+++ b/app/views/accounts/new.js.erb
@@ -1,2 +1,6 @@
 $('#form').html("<%= j render 'form' %>").show();
 
+$('#back-to-main').click(function() {
+  Banque.toAndFromAction();
+  $('#form').hide();
+});
