--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,12 +1,7 @@
 <%= form_for(@account, remote: true) do |f| %>
-  <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :balance %><br>
-    <%= f.number_field :balance %>
-  </div>
+    <%= f.hidden_field :balance, value: 0 %>
   <div class="actions">
     <%= f.submit %>
   </div>
