--- a/app/views/accounts/create.js.erb
+++ b/app/views/accounts/create.js.erb
@@ -1,2 +1,4 @@
 $('#form').hide();
 Banque.toAndFromAction();
+$('#accounts-field').append("<%= @account.name %>: $<%= @account.balance %>");
+// Add something here that appends the last item to the list
