Allows back to accounts button to return to main page more than once.

--- a/app/views/accounts/create.js.erb
+++ b/app/views/accounts/create.js.erb
@@ -1,4 +1,4 @@
 $('#form').hide();
-Banque.toAndFromAction();
+Banque.goToMain();
 $('#accounts-field').append("<%= @account.name %>: $<%= @account.balance %>");
 // Add something here that appends the last item to the list
