--- a/app/views/accounts/new.js.erb
+++ b/app/views/accounts/new.js.erb
@@ -1,6 +1,6 @@
 $('#form').html("<%= j render 'form' %>").show();
 
 $('#back-to-main').click(function() {
-  Banque.toAndFromAction();
+  Banque.goToMain();
   $('#form').hide();
 });
