--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@account, remote: true) do |f| %>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-    <%= f.hidden_field :balance, value: 0 %>
+    <%= f.label :balance %><br>
+    <%= f.number_field :balance %>
   <div class="actions">
     <%= f.submit %>
   </div>
